# customtex

./: LICENSE  README.md  pyproject.toml
customtex/: __init__.py  __main__.py  cli.py  config.py  configs.py  defaults.py  files_text.py  load_presets.py  main.py  parser.py  parts.py  templates.py  texts.py
customtex/presets/: hypersetups.json  languages.json  macros.json  sectionstyles.json  templates.json  theoremstyles.json  titlestyles.json
customtex/templates_configs/: default_config.json  empty_config.json
template/: cookiecutter.json
template/hooks/: post_gen_project.py
template/{{<<cookiecutter.project_slug>>}}/: main.tex
template/{{<<cookiecutter.project_slug>>}}/tex/: macros.tex  preamble.tex
tests/: __init__.py  parts_test.py  test_cli.py  test_config.py
tests/fake_config_dir/: config.yaml
tests/fake_config_dir/templates/: sample.json
tests/templates/: parse.txt  text_init.txt
tests/tests_texts/: parse.txt  test_text.py  text1.txt  text2.txt
