[tool.poetry]
name = "customtex"
version = "0.1.0"
description = "A CLI utility for setting up LaTeX projects"
authors = ["Mario Vago Marzal <mariovagomarzal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariovagomarzal/customtex"
repository = "https://github.com/mariovagomarzal/customtex"
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.10"
string-color = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mkdocs-material = "^9.0.12"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
customtex = "customtex.main:customtex"
