[tool.poetry]
name = "customtex"
version = "1.0.0-alpha"
description = "A CLI utility for setting up LaTeX projects"
authors = ["Mario Vago Marzal <mariovagomarzal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariovagomarzal/customtex"
repository = "https://github.com/mariovagomarzal/customtex"
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mkdocs-material = "^9.0.12"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "template",
]
